--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.example.quliang.myapplication"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -58,5 +58,6 @@ dependencies {
     implementation project(':MyAnnotation')
     implementation project(':MyProcessor')
     compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    compile 'com.squareup.okhttp3:mockwebserver:3.10.0'
     implementation 'com.android.support:design:26+'
 }
