--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.Main1Activity">
+        <activity android:name=".ui.NativeShareActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,8 +53,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.annotation.NextActivity" />
-        <!--<activity android:name=".ui.PdfViewActivity" />-->
-        <activity android:name=".ui.FileDirShowActivity"></activity>
+        <!-- <activity android:name=".ui.PdfViewActivity" /> -->
+        <activity android:name=".ui.FileDirShowActivity" />
+        <!--<activity android:name=".ui.NativeShareActivity"></activity>-->
     </application>
 
 </manifest>
