--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.PdfDownloadListActivity">
+        <activity android:name=".ui.MIUIToastActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,7 +56,8 @@
         <!-- <activity android:name=".ui.PdfViewActivity" /> -->
         <activity android:name=".ui.FileDirShowActivity" />
         <!-- <activity android:name=".ui.NativeShareActivity"></activity> -->
-        <!--<activity android:name=".ui.PdfDownloadListActivity"></activity>-->
+        <!-- <activity android:name=".ui.PdfDownloadListActivity"></activity> -->
+        <!--<activity android:name=".ui.MIUIToastActivity"></activity>-->
     </application>
 
 </manifest>
