--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MIUIToastActivity">
+        <activity android:name=".ui.PdfDownloadListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
