--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MyCamera2Activity">
+        <activity android:name=".ui.Main9Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
