--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.Main9Activity">
+        <activity android:name=".ui.TextChangelineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -60,7 +60,8 @@
         <!-- <activity android:name=".ui.PdfDownloadListActivity"></activity> -->
         <!-- <activity android:name=".ui.MIUIToastActivity"></activity> -->
         <!-- <activity android:name=".ui.MyCameraActivity"></activity> -->
-        <!--<activity android:name=".ui.MyCamera2Activity"></activity>-->
+        <!-- <activity android:name=".ui.MyCamera2Activity"></activity> -->
+        <!--<activity android:name=".ui.TextChangelineActivity"></activity>-->
     </application>
 
 </manifest>
