--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jcodecraeer:xrecyclerview:1.5.9'
 //    implementation "io.reactivex.rxjava2:rxjava:2.1.16"
 //    implementation 'io.reactivex:rxandroid:1.0.1'
 }
