--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         flavorDimensions "versionCode"
 
         javaCompileOptions {
@@ -64,6 +64,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jcodecraeer:xrecyclerview:1.5.9'
+//    compile 'com.android.support:multidex:1.0.1'
 //    implementation "io.reactivex.rxjava2:rxjava:2.1.16"
 //    implementation 'io.reactivex:rxandroid:1.0.1'
 }
