--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.recyclerview.XRecyclerVIewActivity"
+        <activity
+            android:name=".ui.ApkDownloadActivity"
             android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -59,21 +60,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!--<intent-filter>-->
-                <!--<action android:name="android.nfc.action.NDEF_DISCOVERED" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<data android:mimeType="text/plain" />-->
-            <!--</intent-filter>-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.nfc.action.TAG_DISCOVERED"/>-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.nfc.action.NDEF_DISCOVERED" /> -->
+            <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+            <!-- <data android:mimeType="text/plain" /> -->
+            <!-- </intent-filter> -->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.nfc.action.TAG_DISCOVERED"/> -->
+            <!-- </intent-filter> -->
             <intent-filter>
-                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
             </intent-filter>
-            <meta-data android:name="android.nfc.action.TECH_DISCOVERED"
+
+            <meta-data
+                android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/nfc_tech_filter" />
         </activity>
-
         <activity android:name=".ui.annotation.NextActivity" />
         <!-- <activity android:name=".ui.PdfViewActivity" /> -->
         <activity android:name=".ui.FileDirShowActivity" />
@@ -83,7 +85,19 @@
         <!-- <activity android:name=".ui.MyCameraActivity"></activity> -->
         <!-- <activity android:name=".ui.MyCamera2Activity"></activity> -->
         <!-- <activity android:name=".ui.TextChangelineActivity"></activity> -->
-        <!--<activity android:name=".ui.NFCActivity"></activity>-->
+        <!-- <activity android:name=".ui.NFCActivity"></activity> -->
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.yll520wcf.test.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true"> <!-- 元数据 -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+        <activity android:name=".ui.webnative.WebActivity"></activity>
     </application>
 
 </manifest>
